--- a/requirements.txt
+++ b/requirements.txt
@@ -27,11 +27,14 @@ netaddr==0.8.0
 parsimonious==0.8.1
 protobuf==3.19.4
 pycryptodome==3.14.1
+PyJWT==2.3.0
 pyrsistent==0.18.1
+pytz==2021.3
 requests==2.27.1
 rlp==2.0.1
 six==1.16.0
 toolz==0.11.2
+twilio==7.7.0
 typing==3.7.4.3
 urllib3==1.26.8
 varint==1.0.2
