--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
-aiohttp==3.8.1
+aiohttp==3.7.4.post0
 aiosignal==1.2.0
-async-timeout==4.0.2
+async-timeout==3.0.1
 attrs==21.4.0
 base58==2.1.1
 bitarray==1.2.2
 certifi==2021.10.8
+chardet==4.0.0
 charset-normalizer==2.0.12
 cytoolz==0.11.2
+discord==1.7.3
+discord.py==1.7.3
 eth-abi==2.1.1
 eth-account==0.5.7
 eth-hash==0.3.2
@@ -36,6 +39,7 @@ six==1.16.0
 toolz==0.11.2
 twilio==7.7.0
 typing==3.7.4.3
+typing_extensions==4.1.1
 urllib3==1.26.8
 varint==1.0.2
 web3==5.28.0
