--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,12 @@ async-timeout==3.0.1
 attrs==21.4.0
 base58==2.1.1
 bitarray==1.2.2
+cachetools==5.0.0
 certifi==2021.10.8
 chardet==4.0.0
 charset-normalizer==2.0.12
+cssselect==1.1.0
+cssutils==2.4.0
 cytoolz==0.11.2
 discord==1.7.3
 discord.py==1.7.3
@@ -24,10 +27,12 @@ idna==3.3
 ipfshttpclient==0.8.0a2
 jsonschema==3.2.0
 lru-dict==1.1.7
+lxml==4.8.0
 multiaddr==0.0.9
 multidict==6.0.2
 netaddr==0.8.0
 parsimonious==0.8.1
+premailer==3.10.0
 protobuf==3.19.4
 pycryptodome==3.14.1
 PyJWT==2.3.0
@@ -44,4 +49,5 @@ urllib3==1.26.8
 varint==1.0.2
 web3==5.28.0
 websockets==9.1
+yagmail==0.15.277
 yarl==1.7.2
