--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ charset-normalizer==2.0.12
 cssselect==1.1.0
 cssutils==2.4.0
 cytoolz==0.11.2
+deepdiff==5.8.0
 discord==1.7.3
 discord.py==1.7.3
 eth-abi==2.1.1
@@ -31,17 +32,20 @@ lxml==4.8.0
 multiaddr==0.0.9
 multidict==6.0.2
 netaddr==0.8.0
+ordered-set==4.1.0
 parsimonious==0.8.1
 premailer==3.10.0
 protobuf==3.19.4
 pycryptodome==3.14.1
 PyJWT==2.3.0
 pyrsistent==0.18.1
+python-coinmarketcap==0.3
 pytz==2021.3
 requests==2.27.1
 rlp==2.0.1
 six==1.16.0
 toolz==0.11.2
+tqdm==4.63.1
 twilio==7.7.0
 typing==3.7.4.3
 typing_extensions==4.1.1
