--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,14 @@ eth-rlp==0.2.1
 eth-typing==2.3.0
 eth-utils==1.10.0
 frozenlist==1.3.0
+google-api-core==2.7.2
+google-api-python-client==2.44.0
+google-auth==2.6.4
+google-auth-httplib2==0.1.0
+google-auth-oauthlib==0.5.1
+googleapis-common-protos==1.56.0
 hexbytes==0.2.2
+httplib2==0.20.4
 idna==3.3
 ipfshttpclient==0.8.0a2
 jsonschema==3.2.0
@@ -32,23 +39,30 @@ lxml==4.8.0
 multiaddr==0.0.9
 multidict==6.0.2
 netaddr==0.8.0
+oauthlib==3.2.0
 ordered-set==4.1.0
 parsimonious==0.8.1
 premailer==3.10.0
 protobuf==3.19.4
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycryptodome==3.14.1
 PyJWT==2.3.0
+pyparsing==3.0.8
 pyrsistent==0.18.1
 python-coinmarketcap==0.3
 pytz==2021.3
 requests==2.27.1
+requests-oauthlib==1.3.1
 rlp==2.0.1
+rsa==4.8
 six==1.16.0
 toolz==0.11.2
 tqdm==4.63.1
 twilio==7.7.0
 typing==3.7.4.3
 typing_extensions==4.1.1
+uritemplate==4.1.1
 urllib3==1.26.8
 varint==1.0.2
 web3==5.28.0
