--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,21 @@
 aiohttp==3.7.4.post0
 aiosignal==1.2.0
+astroid==2.11.3
 async-timeout==3.0.1
 attrs==21.4.0
 base58==2.1.1
 bitarray==1.2.2
+black==22.3.0
 cachetools==5.0.0
 certifi==2021.10.8
 chardet==4.0.0
 charset-normalizer==2.0.12
+click==8.1.2
 cssselect==1.1.0
 cssutils==2.4.0
 cytoolz==0.11.2
 deepdiff==5.8.0
+dill==0.3.4
 discord==1.7.3
 discord-webhook==0.15.0
 discord.py==1.7.3
@@ -34,23 +38,33 @@ hexbytes==0.2.2
 httplib2==0.20.4
 idna==3.3
 ipfshttpclient==0.8.0a2
+isort==5.10.1
 jsonschema==3.2.0
+lazy-object-proxy==1.7.1
 lru-dict==1.1.7
 lxml==4.8.0
+mccabe==0.7.0
+mock==4.0.3
 multiaddr==0.0.9
 multidict==6.0.2
+mypy==0.942
+mypy-extensions==0.4.3
 netaddr==0.8.0
 oauthlib==3.2.0
 ordered-set==4.1.0
 parsimonious==0.8.1
+pathspec==0.9.0
+platformdirs==2.5.2
 premailer==3.10.0
 protobuf==3.19.4
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycryptodome==3.14.1
 PyJWT==2.3.0
+pylint==2.13.7
 pyparsing==3.0.8
 pyrsistent==0.18.1
+PySocks==1.7.1
 python-coinmarketcap==0.3
 pytz==2021.3
 requests==2.27.1
@@ -58,9 +72,15 @@ requests-oauthlib==1.3.1
 rlp==2.0.1
 rsa==4.8
 six==1.16.0
+stem==1.8.0
+tomli==2.0.1
 toolz==0.11.2
+torrequest==0.1.0
 tqdm==4.63.1
 twilio==7.7.0
+types-mock==4.0.13
+types-requests==2.27.20
+types-urllib3==1.26.13
 typing==3.7.4.3
 typing_extensions==4.1.1
 uritemplate==4.1.1
@@ -68,5 +88,6 @@ urllib3==1.26.8
 varint==1.0.2
 web3==5.28.0
 websockets==9.1
+wrapt==1.14.0
 yagmail==0.15.277
 yarl==1.7.2
