--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,7 @@ google-auth==2.6.4
 google-auth-httplib2==0.1.0
 google-auth-oauthlib==0.5.1
 googleapis-common-protos==1.56.0
+gspread==5.3.2
 hexbytes==0.2.2
 httplib2==0.20.4
 idna==3.3
@@ -82,7 +83,7 @@ types-mock==4.0.13
 types-requests==2.27.20
 types-urllib3==1.26.13
 typing==3.7.4.3
-typing_extensions==4.1.1
+typing-extensions==4.1.1
 uritemplate==4.1.1
 urllib3==1.26.8
 varint==1.0.2
