--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,7 @@ google-auth-httplib2==0.1.0
 google-auth-oauthlib==0.5.1
 googleapis-common-protos==1.56.0
 gspread==5.3.2
+gspread-formatting==1.0.6
 hexbytes==0.2.2
 httplib2==0.20.4
 idna==3.3
@@ -51,8 +52,11 @@ multidict==6.0.2
 mypy==0.942
 mypy-extensions==0.4.3
 netaddr==0.8.0
+numpy==1.22.3
+oauth2client==4.1.3
 oauthlib==3.2.0
 ordered-set==4.1.0
+pandas==1.4.2
 parsimonious==0.8.1
 pathspec==0.9.0
 platformdirs==2.5.2
@@ -61,12 +65,14 @@ protobuf==3.19.4
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycryptodome==3.14.1
+pygsheets==2.0.5
 PyJWT==2.3.0
 pylint==2.13.7
 pyparsing==3.0.8
 pyrsistent==0.18.1
 PySocks==1.7.1
 python-coinmarketcap==0.3
+python-dateutil==2.8.2
 pytz==2021.3
 requests==2.27.1
 requests-oauthlib==1.3.1
@@ -83,7 +89,7 @@ types-mock==4.0.13
 types-requests==2.27.20
 types-urllib3==1.26.13
 typing==3.7.4.3
-typing-extensions==4.1.1
+typing_extensions==4.1.1
 uritemplate==4.1.1
 urllib3==1.26.8
 varint==1.0.2
