--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ attrs==21.4.0
 base58==2.1.1
 bitarray==1.2.2
 black==22.3.0
+CacheControl==0.12.11
 cachetools==5.0.0
 certifi==2021.10.8
 chardet==4.0.0
@@ -27,13 +28,21 @@ eth-keys==0.3.4
 eth-rlp==0.2.1
 eth-typing==2.3.0
 eth-utils==1.10.0
+firebase-admin==5.2.0
 frozenlist==1.3.0
 google-api-core==2.7.2
 google-api-python-client==2.44.0
 google-auth==2.6.4
 google-auth-httplib2==0.1.0
 google-auth-oauthlib==0.5.1
+google-cloud-core==2.3.0
+google-cloud-firestore==2.4.0
+google-cloud-storage==2.3.0
+google-crc32c==1.3.0
+google-resumable-media==2.3.2
 googleapis-common-protos==1.56.0
+grpcio==1.46.0
+grpcio-status==1.46.0
 gspread==5.3.2
 gspread-formatting==1.0.6
 hexbytes==0.2.2
@@ -47,6 +56,7 @@ lru-dict==1.1.7
 lxml==4.8.0
 mccabe==0.7.0
 mock==4.0.3
+msgpack==1.0.3
 multiaddr==0.0.9
 multidict==6.0.2
 mypy==0.942
@@ -61,6 +71,7 @@ parsimonious==0.8.1
 pathspec==0.9.0
 platformdirs==2.5.2
 premailer==3.10.0
+proto-plus==1.20.3
 protobuf==3.19.4
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
