--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ eth-rlp==0.2.1
 eth-typing==2.3.0
 eth-utils==1.10.0
 firebase-admin==5.2.0
+free-proxy==1.0.6
 frozenlist==1.3.0
 google-api-core==2.7.2
 google-api-python-client==2.44.0
