--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,8 @@ eth-rlp==0.2.1
 eth-typing==2.3.0
 eth-utils==1.10.0
 firebase-admin==5.2.0
+Flask==2.2.2
+Flask-SQLAlchemy==3.0.2
 free-proxy==1.0.6
 frozenlist==1.3.0
 google-api-core==2.7.2
@@ -42,6 +44,7 @@ google-cloud-storage==2.3.0
 google-crc32c==1.3.0
 google-resumable-media==2.3.2
 googleapis-common-protos==1.56.0
+greenlet==2.0.1
 grpcio==1.46.0
 grpcio-status==1.46.0
 gspread==5.3.2
@@ -52,10 +55,14 @@ idna==3.3
 inflection==0.5.1
 ipfshttpclient==0.8.0a2
 isort==5.10.1
+itsdangerous==2.1.2
+Jinja2==3.1.2
 jsonschema==3.2.0
 lazy-object-proxy==1.7.1
 lru-dict==1.1.7
 lxml==4.8.0
+MarkupSafe==2.1.1
+marshmallow==3.19.0
 mccabe==0.7.0
 mock==4.0.3
 msgpack==1.0.3
@@ -68,6 +75,7 @@ numpy==1.22.3
 oauth2client==4.1.3
 oauthlib==3.2.0
 ordered-set==4.1.0
+packaging==22.0
 pandas==1.4.2
 parsimonious==0.8.1
 pathspec==0.9.0
@@ -92,6 +100,8 @@ requests-oauthlib==1.3.1
 rlp==2.0.1
 rsa==4.8
 six==1.16.0
+SQLAlchemy==1.4.45
+SQLAlchemy-Utils==0.39.0
 stem==1.8.0
 termcolor==1.1.0
 tomli==2.0.1
@@ -109,6 +119,7 @@ urllib3==1.26.8
 varint==1.0.2
 web3==5.28.0
 websockets==9.1
+Werkzeug==2.2.2
 wrapt==1.14.0
 yagmail==0.15.277
 yarl==1.7.2
