--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ deepdiff==5.8.0
 dill==0.3.4
 discord==2.1.0
 discord-webhook==0.15.0
+discord.py==2.1.0
 eth-abi==2.1.1
 eth-account==0.5.7
 eth-hash==0.3.2
@@ -60,9 +61,11 @@ jsonschema==3.2.0
 lazy-object-proxy==1.7.1
 lru-dict==1.1.7
 lxml==4.8.0
+markdown-it-py==2.1.0
 MarkupSafe==2.1.1
 marshmallow==3.19.0
 mccabe==0.7.0
+mdurl==0.1.2
 mock==4.0.3
 msgpack==1.0.3
 multiaddr==0.0.9
@@ -85,6 +88,7 @@ protobuf==3.19.4
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycryptodome==3.14.1
+Pygments==2.14.0
 pygsheets==2.0.5
 PyJWT==2.3.0
 pylint==2.13.7
@@ -96,6 +100,7 @@ python-dateutil==2.8.2
 pytz==2021.3
 requests==2.27.1
 requests-oauthlib==1.3.1
+rich==13.3.1
 rlp==2.0.1
 rsa==4.8
 six==1.16.0
