--- a/requirements.txt
+++ b/requirements.txt
@@ -13,8 +13,10 @@ certifi==2021.10.8
 chardet==4.0.0
 charset-normalizer==2.0.12
 click==8.1.2
+contourpy==1.0.7
 cssselect==1.1.0
 cssutils==2.4.0
+cycler==0.11.0
 cytoolz==0.11.2
 deepdiff==5.8.0
 dill==0.3.4
@@ -32,6 +34,7 @@ eth-utils==1.10.0
 firebase-admin==5.2.0
 Flask==2.2.2
 Flask-SQLAlchemy==3.0.2
+fonttools==4.38.0
 free-proxy==1.0.6
 frozenlist==1.3.0
 google-api-core==2.7.2
@@ -59,12 +62,14 @@ isort==5.10.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
 jsonschema==3.2.0
+kiwisolver==1.4.4
 lazy-object-proxy==1.7.1
 lru-dict==1.1.7
 lxml==4.8.0
 markdown-it-py==2.1.0
 MarkupSafe==2.1.1
 marshmallow==3.19.0
+matplotlib==3.6.3
 mccabe==0.7.0
 mdurl==0.1.2
 mock==4.0.3
@@ -82,6 +87,7 @@ packaging==22.0
 pandas==1.4.2
 parsimonious==0.8.1
 pathspec==0.9.0
+Pillow==9.4.0
 platformdirs==2.5.2
 premailer==3.10.0
 proto-plus==1.20.3
