--- a/requirements.txt
+++ b/requirements.txt
@@ -100,6 +100,9 @@ pygsheets==2.0.5
 PyJWT==2.3.0
 pylint==2.13.7
 pyparsing==3.0.8
+PyQt6==6.4.2
+PyQt6-Qt6==6.4.2
+PyQt6-sip==13.4.1
 pyrsistent==0.18.1
 PySocks==1.7.1
 python-coinmarketcap==0.3
@@ -110,6 +113,7 @@ requests-oauthlib==1.3.1
 rich==13.3.1
 rlp==2.0.1
 rsa==4.8
+scipy==1.10.0
 six==1.16.0
 SQLAlchemy==1.4.45
 SQLAlchemy-Utils==0.39.0
